tests/golden/phase4a/compile-pass/iterator_vec_for.rua
fn main() -> i64 {
    let values = [1, 2, 3];
    let mut total = 0;
    for value in values.iter() {
        total = total + value;
    }
    total
}
