tests/golden/phase4a/compile-fail/iterator_collect_mismatch.rua
fn main() {
    let values = [1, 2, 3]
        .iter()
        .collect::<Vec<String>>();
}
